--- a/composeboard/docker-compose-jobboard-app/docker-compose.yml
+++ b/composeboard/docker-compose-jobboard-app/docker-compose.yml
@@ -1,21 +1,29 @@
 version: "3.9"
 services:
   discovery:
-    build:  ../../discovery-server
+    build: ../../discovery-server
     ports:
       - "8761:8761"
     image: "discovery-server"
   job_A:
     build: ../../job-MS
-    environment: 
+    environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
       - "8182:8180"
     image: "job-service"
+  reservationrestau_A:
+    build: ../../reservation-resto
+    environment:
+      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
+      - spring.cloud.config.uri=http://config:8888
+    ports:
+      - "8280:8280"
+    image: "reservation-restau"
   candidate_B:
-    build:  ../../candidateMS
-    environment: 
+    build: ../../candidateMS
+    environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
@@ -24,8 +32,8 @@ services:
     depends_on:
       - job_A
   candidate_C:
-    build:  ../../candidateMS
-    environment: 
+    build: ../../candidateMS
+    environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
@@ -40,7 +48,7 @@ services:
       - type: bind
         source: ./src/main/resources/centralRepo
         target: /config
-    environment: 
+    environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.profiles.active=native
     ports:
@@ -48,7 +56,7 @@ services:
     image: "config-server"
   gateway:
     build: ../../zuul-server
-    environment: 
+    environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
     ports:
       - "8762:8762"
