--- a/zuul-server/src/main/resources/application.properties
+++ b/zuul-server/src/main/resources/application.properties
@@ -5,7 +5,7 @@ eureka.client.serviceUrl.defaultZone= http://discovery:8761/eureka/
 #eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://localhost:8761/eureka}
 
 zuul.routes.candidats-endpoint.serviceId=candidat-service
-zuul.routes.candidat-service.path=/job-service/*
+zuul.routes.candidat-service.path=/candidat-service/*
 
 zuul.routes.jobs-endpoint.serviceId=job-service
 zuul.routes.job-service.path=/job-service/*
@@ -14,6 +14,6 @@ eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 
-#spring security
-spring.security.user.name=user
-spring.security.user.password=user
+# #spring security
+# spring.security.user.name=user
+# spring.security.user.password=user
