--- a/composeboard/docker-compose-jobboard-app/docker-compose.yml
+++ b/composeboard/docker-compose-jobboard-app/docker-compose.yml
@@ -1,5 +1,13 @@
 version: "3.9"
 services:
+  event-room-reservation_:
+    build: ../../EventRoomReservation
+    environment: 
+      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
+      - spring.cloud.config.uri=http://config:8888
+    ports:
+      - "8100:8100"
+    image: "event-room-reservation-ms"
   discovery:
     build:  ../../discovery-server
     ports:
