--- a/FlightReservation/src/main/resources/application.properties
+++ b/FlightReservation/src/main/resources/application.properties
@@ -9,6 +9,21 @@ spring.config.import=optional:configserver:
 spring.jpa.hibernate.ddl-auto=update
 spring.application.name=flightreservation-service
 
+#eureka registration
+spring.application.name=reservations-resto-service
+server.port=8280
+#eureka.client.server-url.default-zone=http://discovery:8761/eureka/
+#eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.server.wait-time-in-ms-when-sync-empty=5
+#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
+#eureka.client.register-with-eureka=true
+
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://config:8888
+spring.config.import=optional:configserver:http://config:8888/
+
 
 
 
