--- a/FlightReservation/src/main/resources/application.properties
+++ b/FlightReservation/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:file:~/Database/Data/Reservations
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -10,7 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.application.name=flightreservation-service
 
 #eureka registration
-spring.application.name=reservations-resto-service
 server.port=8280
 #eureka.client.server-url.default-zone=http://discovery:8761/eureka/
 #eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
