update merge in master

--- a/reservation-resto/src/main/resources/application.properties
+++ b/reservation-resto/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+
 # Datasource
-#spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.url=jdbc:h2:file:./Database/Data/Reservations;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.username=sa
 spring.datasource.password=
@@ -12,15 +13,13 @@ spring.jpa.hibernate.ddl-auto = update
 
 #eureka registration
 spring.application.name=reservations-resto-service
-server.port=8280
-#eureka.client.server-url.default-zone=http://discovery:8761/eureka/
-#eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
+server.port=8303
 eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.server.wait-time-in-ms-when-sync-empty=5
-#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
-#eureka.client.register-with-eureka=true
 
+
+#spring cloud config
 spring.cloud.config.enabled=true
 spring.cloud.config.uri=http://config:8888
 spring.config.import=optional:configserver:http://config:8888/
