--- a/FlightReservation/src/main/resources/application.properties
+++ b/FlightReservation/src/main/resources/application.properties
@@ -1,27 +1,35 @@
+#H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/Database/Data/Reservations
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:file:./Database/Data/Reservations;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.config.import=optional:configserver:
-spring.jpa.hibernate.ddl-auto=update
-spring.application.name=flightreservation-service
+spring.jpa.hibernate.ddl-auto = update
+
 
 #eureka registration
-server.port=8280
-#eureka.client.server-url.default-zone=http://discovery:8761/eureka/
-#eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka}
+spring.application.name=flightreservation-service
+server.port=8302
 eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka
 eureka.instance.prefer-ip-address=true
 eureka.server.wait-time-in-ms-when-sync-empty=5
-#eureka.client.serviceUrl.defaultZone= http://localhost:8761/eureka
-#eureka.client.register-with-eureka=true
 
+
+#spring cloud config
 spring.cloud.config.enabled=true
 spring.cloud.config.uri=http://config:8888
 spring.config.import=optional:configserver:http://config:8888/
+
+
+
+
+
+
+
 
 
 
