--- a/composeboard/docker-compose-jobboard-app/docker-compose.yml
+++ b/composeboard/docker-compose-jobboard-app/docker-compose.yml
@@ -1,78 +1,49 @@
 version: "3.9"
 services:
-  event-room-reservation_:
-    build: ../../EventRoomReservation
-    environment: 
-      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
-      - spring.cloud.config.uri=http://config:8888
-    ports:
-      - "8100:8100"
-    image: "event-room-reservation-ms"
   discovery:
     build: ../../discovery-server
     ports:
       - "8761:8761"
     image: "discovery-server"
-  job_A:
-    build: ../../job-MS
-    environment:
-      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
-      - spring.cloud.config.uri=http://config:8888
-    ports:
-      - "8182:8180"
-    image: "job-service"
-  reservationrestau_A:
-    build: ../../reservation-resto
-    environment:
-      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
-      - spring.cloud.config.uri=http://config:8888
-    ports:
-      - "8280:8280"
-    image: "reservation-restau"
   carreservation_A:
     build: ../../CarReservation
     environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
-      - "8099:8099"
+      - "8300:8300"
     image: "car-reservation"
+  event-room-reservation_A:
+    build: ../../EventRoomReservation
+    environment:
+      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
+      - spring.cloud.config.uri=http://config:8888
+    ports:
+      - "8301:8301"
+    image: "event-room-reservation-ms"
   flightReservation_A:
     build: ../../FlightReservation
     environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
-      - "8280:8280"
+      - "8302:8302"
     image: "flight-reservation"
-  candidate_B:
-    build: ../../candidateMS
+  reservationrestau_A:
+    build: ../../reservation-resto
     environment:
       - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
       - spring.cloud.config.uri=http://config:8888
     ports:
-      - "3000:8080"
-    image: "candidate-service"
-    depends_on:
-      - job_A
-  candidate_C:
-    build: ../../candidateMS
-    environment:
-      - eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka/
-      - spring.cloud.config.uri=http://config:8888
-    ports:
-      - "3001:8080"
-    image: "candidate-service"
-    depends_on:
-      - job_A
+      - "8303:8303"
+    image: "reservation-restau"
   nodejs_ms:
     build: ../../nodejs-ms
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=discovery
     ports:
-      - "3100:3100"
+      - "5000:5000"
     image: "nodejs-ms"
-
   config:
     build: ../../config-server
     command: --spring.profiles.active=native --spring.cloud.config.server.native.searchLocations=/config
