--- a/ChambreReservation/src/main/resources/application.properties
+++ b/ChambreReservation/src/main/resources/application.properties
@@ -1,16 +1,28 @@
-server.port = 8097
+#H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
+
+
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test
-spring.datasource.username=root
+spring.datasource.url=jdbc:h2:file:./Database/Data/Reservations;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.config.import=optional:configserver:
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = update
+
+
+#eureka registration
 spring.application.name=chambreReservation-service
+server.port=8304
+eureka.client.serviceUrl.defaultZone=http://discovery:8761/eureka
+eureka.instance.prefer-ip-address=true
+eureka.server.wait-time-in-ms-when-sync-empty=5
 
 
+#spring cloud config
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://config:8888
+spring.config.import=optional:configserver:http://config:8888/
 
 
 
