--- a/ChambreReservation/Dockerfile
+++ b/ChambreReservation/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:15
 EXPOSE 8304
-ADD /target/carReservation-0.0.1-SNAPSHOT.jar carReservation-0.0.1-SNAPSHOT.jar
-ENTRYPOINT ["java","-jar","carReservation-0.0.1-SNAPSHOT.jar"]
+ADD /target/chambreReservation-0.0.1-SNAPSHOT.jar chambreReservation-0.0.1-SNAPSHOT.jar
+ENTRYPOINT ["java","-jar","chambreReservation-0.0.1-SNAPSHOT.jar"]
