--- a/zuul-server/src/main/resources/application.properties
+++ b/zuul-server/src/main/resources/application.properties
@@ -3,6 +3,10 @@ server.port= 8762
 #eureka config
 eureka.client.serviceUrl.defaultZone= http://discovery:8761/eureka/
 
+zuul.routes.chambreReservation-endpoint.serviceId=chambreReservation-service
+zuul.routes.chambreReservation-service.path=/chambreReservation-service/*
+
+
 eureka.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
