--- a/composeboard/docker-compose-jobboard-app/docker-compose.yml
+++ b/composeboard/docker-compose-jobboard-app/docker-compose.yml
@@ -49,6 +49,9 @@ services:
     build: ../../nodejs-ms
     environment:
       - EUREKA_CLIENT_SERVICEURL_DEFAULTZONE=discovery
+      - MONGO_URI=mongodb+srv://toutou12345:1ering12345@cluster0.doo6l.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+      - PORT=5000
+      - NODE_ENV=development
     ports:
       - "5000:5000"
     image: "nodejs-ms"
